--- a/index.html
+++ b/index.html
@@ -4,90 +4,66 @@
   <meta charset="utf-8">
   <title>GPS Speed Test</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      background: #0b0f14;
-      color: #dfe6ee;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      text-align: center;
-    }
-    h1 { margin-bottom: 1rem; color: #4be1ff; }
-    .readout { font-size: 1.2rem; margin: 0.5rem 0; }
-    .speed { font-size: 2rem; color: #00ff9c; }
-    button {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #1a2533;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover { background: #263547; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>GPS Speed / Velocity Test</h1>
-  <div class="readout">Latitude: <span id="lat">--</span></div>
-  <div class="readout">Longitude: <span id="lon">--</span></div>
-  <div class="readout">Heading: <span id="heading">--</span></div>
-  <div class="readout speed">Speed: <span id="speed">--</span> m/s</div>
-  <button id="start">Start Tracking</button>
+  <main class="dashboard">
+    <header class="dashboard__header">
+      <h1>GPS Speed / Velocity Test</h1>
+      <p class="tagline">Live telemetry with persistent performance tracking.</p>
+    </header>
 
-  <script>
-    const latEl = document.getElementById("lat");
-    const lonEl = document.getElementById("lon");
-    const headingEl = document.getElementById("heading");
-    const speedEl = document.getElementById("speed");
-    const startBtn = document.getElementById("start");
+    <section class="controls">
+      <button id="start" type="button">Start Tracking</button>
+      <button id="reset-stats" type="button">Reset Stats</button>
+    </section>
 
-    let last = null;
-    let lastTime = 0;
-    const R = 6371000; // Earth radius in meters
+    <section class="card">
+      <h2 class="card__title">Position</h2>
+      <dl class="readout-list">
+        <div class="readout"><dt>Latitude</dt><dd id="lat">--</dd></div>
+        <div class="readout"><dt>Longitude</dt><dd id="lon">--</dd></div>
+        <div class="readout"><dt>Heading</dt><dd id="heading">--</dd></div>
+        <div class="readout"><dt>Total Distance</dt><dd id="distance-total">0.00 km</dd></div>
+        <div class="readout"><dt>Session Time</dt><dd id="session-duration">00:00:00</dd></div>
+      </dl>
+    </section>
 
-    startBtn.onclick = () => {
-      if (!navigator.geolocation) {
-        alert("Geolocation not supported");
-        return;
-      }
+    <section class="card">
+      <h2 class="card__title">Speed</h2>
+      <dl class="readout-list">
+        <div class="readout readout--highlight"><dt>Speed (m/s)</dt><dd id="speed">--</dd></div>
+        <div class="readout"><dt>Speed (mph)</dt><dd id="speed-mph">--</dd></div>
+        <div class="readout"><dt>Speed (km/h)</dt><dd id="speed-kph">--</dd></div>
+        <div class="readout"><dt>Speed (knots)</dt><dd id="speed-knots">--</dd></div>
+        <div class="readout"><dt>Minimum (m/s)</dt><dd id="speed-min">--</dd></div>
+        <div class="readout"><dt>Maximum (m/s)</dt><dd id="speed-max">--</dd></div>
+        <div class="readout"><dt>Average (m/s)</dt><dd id="speed-avg">--</dd></div>
+      </dl>
+    </section>
 
-      navigator.geolocation.watchPosition(
-        p => {
-          const { latitude, longitude, speed, heading } = p.coords;
-          latEl.textContent = latitude.toFixed(6);
-          lonEl.textContent = longitude.toFixed(6);
-          headingEl.textContent = heading ? heading.toFixed(1) + "°" : "--";
+    <section class="card">
+      <h2 class="card__title">Acceleration</h2>
+      <dl class="readout-list">
+        <div class="readout"><dt>Acceleration</dt><dd id="accel">--</dd></div>
+        <div class="readout"><dt>Deceleration</dt><dd id="decel">--</dd></div>
+        <div class="readout"><dt>Peak Accel</dt><dd id="peak-accel">--</dd></div>
+        <div class="readout"><dt>Peak Decel</dt><dd id="peak-decel">--</dd></div>
+      </dl>
+    </section>
 
-          const now = Date.now() / 1000;
-          let calcSpeed = speed;
+    <section class="card">
+      <h2 class="card__title">Performance Timers</h2>
+      <dl class="readout-list">
+        <div class="readout"><dt>¼ Mile Status</dt><dd id="quarter-status">Standby</dd></div>
+        <div class="readout"><dt>¼ Mile Last</dt><dd id="quarter-last">--</dd></div>
+        <div class="readout"><dt>¼ Mile Best</dt><dd id="quarter-best">--</dd></div>
+        <div class="readout"><dt>0-60 mph Last</dt><dd id="zero-sixty-last">--</dd></div>
+        <div class="readout"><dt>0-60 mph Best</dt><dd id="zero-sixty-best">--</dd></div>
+      </dl>
+    </section>
+  </main>
 
-          if (!calcSpeed && last) {
-            const dLat = (latitude - last.lat) * Math.PI / 180;
-            const dLon = (longitude - last.lon) * Math.PI / 180;
-            const a = Math.sin(dLat/2)**2 +
-              Math.cos(last.lat*Math.PI/180) *
-              Math.cos(latitude*Math.PI/180) *
-              Math.sin(dLon/2)**2;
-            const dist = 2 * R * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-            calcSpeed = dist / (now - lastTime);
-          }
-
-          speedEl.textContent = calcSpeed ? calcSpeed.toFixed(2) : "--";
-          last = { lat: latitude, lon: longitude };
-          lastTime = now;
-        },
-        err => alert("Error: " + err.message),
-        { enableHighAccuracy: true, maximumAge: 0, timeout: 10000 }
-      );
-
-      startBtn.disabled = true;
-      startBtn.textContent = "Tracking…";
-    };
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
