implemented stop button for geo-location tracking and added reveresed veiw

--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
             </dl>
           </section>
         </article>
+
+        <article class="display-page display-page--mirror" data-label="HUD Mirror">
+          <div class="mirror-display">
+            <p class="mirror-display__intro">Mirrored HUD for windshield reflections. Place your device on the dash and view the reflection for correct orientation.</p>
+            <div class="mirror-display__metrics">
+              <div class="mirror-display__metric mirror-display__metric--kph">
+                <span class="mirror-display__label">KPH</span>
+                <span class="mirror-display__value" id="mirror-speed-kph">--</span>
+              </div>
+              <div class="mirror-display__metric mirror-display__metric--mph">
+                <span class="mirror-display__label">MPH</span>
+                <span class="mirror-display__value" id="mirror-speed-mph">--</span>
+              </div>
+            </div>
+            <p class="mirror-display__hint">Tip: increase screen brightness and use dark surroundings for the sharpest reflection.</p>
+          </div>
+        </article>
       </div>
     </section>
 
