revised layout to better support mobile.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GPS Speed Test</title>
+  <title>Web-Based Speedometer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main class="dashboard">
     <header class="dashboard__header">
-      <h1>GPS Speed / Velocity Test</h1>
+      <h1>Web-Based Speedometer</h1>
       <p class="tagline">Live telemetry with persistent performance tracking.</p>
     </header>
 
@@ -31,6 +31,7 @@
 
     <section class="display-wrapper" data-display-carousel>
       <div class="display-track" id="display-track">
+
         <article class="display-page" data-label="Overview">
           <h2 class="display-page__title">Overview</h2>
           <section class="card">
