--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Web-Based Speedometer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="app-stage" data-app-stage>
     <main class="app-surface" data-app-surface>
@@ -20,100 +22,206 @@
           <button id="reset-stats" type="button">Reset Stats</button>
         </div>
 
-        <div class="controls__tray">
-          <div class="unit-toggle" role="group" aria-label="Speed units" data-speed-toggle>
-            <button type="button" class="unit-toggle__button" data-unit="mps" aria-pressed="false">m/s</button>
-            <button type="button" class="unit-toggle__button is-active" data-unit="mph" aria-pressed="true">mph</button>
-            <button type="button" class="unit-toggle__button" data-unit="kph" aria-pressed="false">km/h</button>
+        <div class="pager" aria-live="polite">
+          <button id="display-prev" class="pager__button" type="button" aria-label="Previous display">‹</button>
+          <div class="pager__status">
+            <span id="display-label" class="pager__label">Overview</span>
+            <small id="display-indicator" class="pager__indicator">1 / X</small>
           </div>
 
-          <div class="pager" aria-live="polite">
-            <button id="display-prev" class="pager__button" type="button" aria-label="Previous display">‹</button>
-            <div class="pager__status">
-              <span id="display-label" class="pager__label">Telemetry</span>
-              <small id="display-indicator" class="pager__indicator">1 / 1</small>
+          <section class="display-wrapper" data-display-carousel>
+            <div class="display-track" id="display-track">
+
+              <!-- =========================
+             OVERVIEW — POSITION PAGE
+        ========================== -->
+              <article class="display-page" data-label="Position">
+                <h2 class="display-page__title">Position</h2>
+                <section class="card">
+                  <h3 class="card__title">Position</h3>
+                  <dl class="readout-list">
+                    <div class="readout">
+                      <dt>Latitude</dt>
+                      <dd id="lat">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Longitude</dt>
+                      <dd id="lon">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Heading</dt>
+                      <dd id="heading">--</dd>
+                    </div>
+                  </dl>
+                </section>
+              </article>
+
+              <!-- =========================
+             OVERVIEW — TRIP SUMMARY
+        ========================== -->
+              <article class="display-page" data-label="Trip Summary">
+                <h2 class="display-page__title">Trip Summary</h2>
+                <section class="card">
+                  <h3 class="card__title">Trip Summary</h3>
+                  <dl class="readout-list">
+                    <div class="readout">
+                      <dt>Total Distance</dt>
+                      <dd id="distance-total">0.00 km / 0.00 mi</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Session Time</dt>
+                      <dd id="session-duration">00:00:00</dd>
+                    </div>
+                  </dl>
+                </section>
+              </article>
+
+              <!-- =========================
+             SPEED — INSTANT SPEED
+        ========================== -->
+              <article class="display-page" data-label="Instant Speed">
+                <h2 class="display-page__title">Instant Speed</h2>
+                <section class="card">
+                  <h3 class="card__title">Instant Speed</h3>
+                  <dl class="readout-list">
+                    <div class="readout readout--highlight">
+                      <dt>Speed (m/s)</dt>
+                      <dd id="speed">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Speed (mph)</dt>
+                      <dd id="speed-mph">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Speed (km/h)</dt>
+                      <dd id="speed-kph">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Speed (knots)</dt>
+                      <dd id="speed-knots">--</dd>
+                    </div>
+                  </dl>
+                </section>
+              </article>
+
+              <!-- =========================
+             SPEED — HISTORICAL
+        ========================== -->
+              <article class="display-page" data-label="Speed History">
+                <h2 class="display-page__title">Historical Speed Stats</h2>
+                <section class="card">
+                  <h3 class="card__title">Historical</h3>
+                  <dl class="readout-list">
+                    <div class="readout">
+                      <dt>Minimum (m/s)</dt>
+                      <dd id="speed-min">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Maximum (m/s)</dt>
+                      <dd id="speed-max">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Average (m/s)</dt>
+                      <dd id="speed-avg">--</dd>
+                    </div>
+                  </dl>
+                </section>
+              </article>
+
+              <!-- =========================
+             PERFORMANCE — ACCEL
+        ========================== -->
+              <article class="display-page" data-label="Acceleration">
+                <h2 class="display-page__title">Acceleration</h2>
+                <section class="card">
+                  <h3 class="card__title">Acceleration</h3>
+                  <dl class="readout-list">
+                    <div class="readout">
+                      <dt>Acceleration</dt>
+                      <dd id="accel">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Deceleration</dt>
+                      <dd id="decel">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Peak Accel</dt>
+                      <dd id="peak-accel">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>Peak Decel</dt>
+                      <dd id="peak-decel">--</dd>
+                    </div>
+                  </dl>
+                </section>
+              </article>
+
+              <!-- =========================
+             PERFORMANCE — TIMERS
+        ========================== -->
+              <article class="display-page" data-label="Performance Timers">
+                <h2 class="display-page__title">Performance Timers</h2>
+                <section class="card">
+                  <h3 class="card__title">Performance Timers</h3>
+                  <dl class="readout-list">
+                    <div class="readout">
+                      <dt>¼ Mile Status</dt>
+                      <dd id="quarter-status">Standby</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>¼ Mile Last</dt>
+                      <dd id="quarter-last">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>¼ Mile Best</dt>
+                      <dd id="quarter-best">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>0-60 mph Last</dt>
+                      <dd id="zero-sixty-last">--</dd>
+                    </div>
+                    <div class="readout">
+                      <dt>0-60 mph Best</dt>
+                      <dd id="zero-sixty-best">--</dd>
+                    </div>
+                  </dl>
+                </section>
+              </article>
+
+              <!-- =========================
+               HUD MIRROR
+        ========================== -->
+              <article class="display-page display-page--mirror" data-label="HUD Mirror">
+                <div class="mirror-display">
+                  <p class="mirror-display__intro">Mirrored HUD for windshield reflections.</p>
+                  <div class="mirror-display__metrics">
+                    <div class="mirror-display__metric mirror-display__metric--kph">
+                      <span class="mirror-display__label">KPH</span>
+                      <span class="mirror-display__value" id="mirror-speed-kph">--</span>
+                    </div>
+                    <div class="mirror-display__metric mirror-display__metric--mph">
+                      <span class="mirror-display__label">MPH</span>
+                      <span class="mirror-display__value" id="mirror-speed-mph">--</span>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
             </div>
-            <button id="display-next" class="pager__button" type="button" aria-label="Next display">›</button>
-          </div>
-        </div>
-      </section>
+          </section>
 
-      <section class="display-wrapper" data-display-carousel>
-        <div class="display-track" id="display-track">
-
-          <article class="display-page display-page--telemetry" data-label="Telemetry">
-            <div class="speed-panel">
-              <div class="speed-panel__meta">
-                <p class="speed-panel__eyebrow">Current speed</p>
-                <p class="speed-panel__heading">Heading <span id="heading">--</span></p>
-              </div>
-              <div class="speed-panel__value" aria-live="polite">
-                <span id="speed-primary">--</span>
-                <span id="speed-unit-label">mph</span>
-              </div>
-              <dl class="speed-panel__stats">
-                <div><dt>Average</dt><dd id="speed-avg">--</dd></div>
-                <div><dt>Minimum</dt><dd id="speed-min">--</dd></div>
-                <div><dt>Maximum</dt><dd id="speed-max">--</dd></div>
-              </dl>
-            </div>
-
-            <div class="stat-grid">
-              <section class="stat-card">
-                <h3>Trip Summary</h3>
-                <dl>
-                  <div><dt>Session Time</dt><dd id="session-duration">00:00:00</dd></div>
-                  <div><dt>Total Distance</dt><dd id="distance-total">0.00 km / 0.00 mi</dd></div>
-                </dl>
-              </section>
-
-              <section class="stat-card">
-                <h3>Position</h3>
-                <dl>
-                  <div><dt>Latitude</dt><dd id="lat">--</dd></div>
-                  <div><dt>Longitude</dt><dd id="lon">--</dd></div>
-                </dl>
-              </section>
-
-              <section class="stat-card">
-                <h3>Acceleration</h3>
-                <dl>
-                  <div><dt>Acceleration</dt><dd id="accel">--</dd></div>
-                  <div><dt>Deceleration</dt><dd id="decel">--</dd></div>
-                  <div><dt>Peak Accel</dt><dd id="peak-accel">--</dd></div>
-                  <div><dt>Peak Decel</dt><dd id="peak-decel">--</dd></div>
-                </dl>
-              </section>
-
-              <section class="stat-card">
-                <h3>Performance</h3>
-                <dl>
-                  <div><dt>¼ Mile Status</dt><dd id="quarter-status">Standby</dd></div>
-                  <div><dt>¼ Mile Last</dt><dd id="quarter-last">--</dd></div>
-                  <div><dt>¼ Mile Best</dt><dd id="quarter-best">--</dd></div>
-                  <div><dt>0-60 mph Last</dt><dd id="zero-sixty-last">--</dd></div>
-                  <div><dt>0-60 mph Best</dt><dd id="zero-sixty-best">--</dd></div>
-                </dl>
-              </section>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <section class="display-upload">
-        <div>
-          <h2>Custom Displays</h2>
-          <p>Upload a set of HTML, CSS, and JS files to create swipeable screens for client-built layouts. Files with the same base name will be grouped into a display. <strong>Tip:</strong> inside your custom JS listen for the <code>telemetry-update</code> event to react to live data.</p>
-        </div>
-        <label class="upload-button">
-          <input id="display-upload" type="file" accept=".html,.htm,.css,.js" multiple>
-          <span>Upload Display Files</span>
-        </label>
-        <ul class="upload-list" id="custom-display-list" aria-live="polite"></ul>
-      </section>
+          <section class="display-upload">
+            <h2>Custom Displays</h2>
+            <p>Upload HTML/CSS/JS to create additional pages.</p>
+            <label class="upload-button">
+              <input id="display-upload" type="file" accept=".html,.htm,.css,.js" multiple>
+              <span>Upload Display Files</span>
+            </label>
+            <ul class="upload-list" id="custom-display-list" aria-live="polite"></ul>
+          </section>
     </main>
-  </div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
